Add jlink distribution tasks for snakeburger-cli